--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
+    "babel-eslint": "^7.1.1",
+    "eslint-plugin-react": "^6.7.1",
     "react-scripts": "0.7.0"
   },
   "dependencies": {
