--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "react-redux": "^4.4.6",
+    "react-router": "^2.0.0",
     "redux": "^3.6.0"
   },
   "scripts": {
